--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss-color-rebeccapurple": "^2.0.0",
     "postcss-loader": "^0.8.2",
     "postcss-simple-vars": "^1.2.0",
+    "react-redux": "^4.4.5",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "sass-loader": "^3.2.0",
