Adding more dependencies

--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "postcss-color-rebeccapurple": "^2.0.0",
     "postcss-loader": "^0.8.2",
     "postcss-simple-vars": "^1.2.0",
+    "ramda": "^0.21.0",
     "react-redux": "^4.4.5",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
+    "redux-logger": "^2.6.1",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "webpack": "^2.1.0-beta.5",
